src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/ValidValidateTemplates/SubPropertySchemaTemplate.liquid
{
    "resourceType": "{{ msg.resourceType }}",
    "id": "{{ msg.id}}",
    "nestedProperty":
    {% validate "Schemas/TestSubPropertySchema.schema.json" -%}
    {
        "testField": "fieldValue"
    }
    {% endvalidate -%}
}
