src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/InvalidValidateTemplates/ErrorVariableInSyntax.liquid
{% validate msg "Schemas/TestSchema.schema.json" -%}
{
}
{% endvalidate -%}